fixed on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -110,6 +110,7 @@ ul {
   font-weight: bold;
   letter-spacing: 0.15rem;
   width: 100%;
+  padding: 1rem;
 }
 
 .card-title p {
@@ -145,6 +146,10 @@ ul {
 
 .card-contact-info p {
   max-width: 100%; /* Ensures text stays within container */
+}
+
+.gym-location {
+  margin-right: -3px;
 }
 
 /* CARD INFO */
@@ -195,11 +200,6 @@ ul {
 .card-social a img {
   width: 24px; /* Adjust icon size */
   height: 24px;
-}
-
-.gym-location {
-  display: flex;
-  align-items: center;
 }
 
 /* ANIMATION IMAGES ROTATION */
@@ -356,7 +356,7 @@ footer p {
     padding: 1.5rem;
   }
 
-  .card-contact img {
+  .contact-img {
     width: 150px;
     height: 150px;
   }
